--- a/src/app/styles/mainpage.css
+++ b/src/app/styles/mainpage.css
@@ -1,78 +1,76 @@
-.div-content-left{
-    color: aliceblue;
-    width: 20%;
-    background-color: rgb(11, 12, 95);
-    background-color: rgb(70, 73, 230);
-    height: 700px;
-    padding-top: 20px; 
-    /* 2 thẻ content được đặt theo chiều ngang */
-    display: inline-block;
+#product-front{
+    padding-top: 30px;
+    padding-bottom: 76px;
+    padding-left: 134px;
+    padding-right: 134px;
+    background-color: #FFFADA;
+}
+#product-front h2{
+    text-align: center;
+    margin-bottom: 76px;
+    font-size: 32px;
+    margin-left: 40px;
+    color: #C08267;
+    font-family: 'Roboto', sans-serif;
+}
 
-    /* Nội dung được ghi trên cùng của div */
-    vertical-align: top;
-
-    /* Xếp các item theo chiều dọc */
-    flex-direction: column;
-
+#list-pro{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+#list-pro .item .i{
+    
+    margin-top: 15px;
+}
+.btn-item{
+    color: white;
+    border-radius: 5px;
+    border: 0px;
+    background-color: #A0583C;
+    width: 80px;
+    height: 30px;
+    margin-bottom: 15px;
+   
+} 
+.btn-item:hover{
+    font-size: 15px;
+}
+#list-pro .item{
+    color: white;
+    width: 230px;
+    /* height: 300px; */
+    background-color:#C08267 ;
+    border-radius: 10px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
-.div-content-right{
-    width: 80%;
-    background-color: rgb(245, 243, 242);
-    height: 700px;
-    display: inline-block;
-
+.list-page{
+    width: 50%;
+   margin-left: 210px;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-h4{
-    margin: 2px;
-}
-.line{
-    width: 100%;
-    background-color: black;
-    border: 0;
-}
+.list-page .number{
+    margin: 0px 20px;
+    width: 37px;
+    height: 37px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #C08267;
 
-
-.nav-manager button{
-    width: 80%;
-    background-color: rgb(70, 73, 230);
-    border: 0;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-align: left;
 }
+.list-page .number a{
+    text-decoration: none;
+    color: white;
 
-.nav-manager button:hover{
-    background-color:rgb(138, 139, 238);
-    color: black;
-}
-
-.container{
-    background-color: antiquewhite;
-    width: 100%;
-}
-
-.search{
-    display: inline-block;
-    position: relative;
-}
-
-.inp-search{
-    width: 350px;
-    height: 30px;
-    border: 0;
-}
-.btn-search{
-    position: absolute;
-    width: 80px;
-    height: 33px;
-    right: 0;
-    top: 0;
-    border: 0;
-    background-color: brown;
 }
