--- a/src/app/styles/login.css
+++ b/src/app/styles/login.css
@@ -1,9 +1,10 @@
 
-
+/*x*/
 .close-btnlogin{
     margin-left: 260px;
     cursor: pointer;
 }
+/*form*/
 .container-login{
     position: fixed;
     top: 0;
