--- a/src/app/styles/mainpage.css
+++ b/src/app/styles/mainpage.css
@@ -5,6 +5,7 @@
     padding-right: 134px;
     background-color: #FFFADA;
 }
+/*label*/
 #product-front h2{
     text-align: center;
     margin-bottom: 76px;
@@ -13,7 +14,7 @@
     color: #C08267;
     font-family: 'Roboto', sans-serif;
 }
-
+/*list product*/
 #list-pro{
     display: flex;
     list-style: none;
@@ -25,6 +26,7 @@
     
     margin-top: 15px;
 }
+/*dat hang*/
 .btn-item{
     color: white;
     border-radius: 5px;
@@ -47,10 +49,10 @@
     margin-bottom: 50px;
     text-align: center;
 }
-
+/*page*/
 .list-page{
     width: 50%;
-   margin-left: 210px;
+   margin-left: 250px;
     display: flex;
     list-style: none;
     justify-content: center;
