remove image ,shoppingcart

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,4 @@
 @import url(styles/footer.css);
 @import url(styles/signup.css);
 @import url(styles/productdetail.css);
+@import url(styles/cart.css);
